--- a/style.css
+++ b/style.css
@@ -33,6 +33,11 @@ body {
     gap: 10px;
 }
 
+a {
+    text-decoration: none;
+    color: white;
+}
+
 .navbar ul {
     display: none;
     position: absolute;
@@ -51,8 +56,6 @@ body {
 
 
 .navbar ul li a {
-    text-decoration: none;
-    color: #fff;
     font-weight: 900;
     letter-spacing: 2px;
 }
@@ -72,30 +75,11 @@ body {
     display: none;
 }
 
-@media screen and (min-width : 1080px) {
-    .navbar {
-        flex-direction: row;
-    }
-
-    .navbar ul {
-        gap: 50px;
-        display: flex;
-        position: inherit;
-        flex-direction: row;
-        background: transparent;
-        width: auto;
-        padding: none;
-
-    }
-
-    #burger {
-        display: none;
-    }
-}
 
 /************************************** PAGES */
 .page {
     display: flex;
+    flex-direction: column;
     height: 100vh;
     width: 100vw;
     justify-content: center;
@@ -110,7 +94,7 @@ body {
     align-items: center;
     border-radius: 10px;
     height: 40%;
-    width: 80%;
+    width: 60%;
     background: linear-gradient(rgba(255, 255, 255, 0.4), transparent 50%);
     animation: shadow-box-name infinite ease-in-out 5s;
 }
@@ -120,26 +104,7 @@ body {
     animation: glow infinite ease-in-out 2s;
 }
 
-@media screen and (min-width : 720px) {
-    #identity {
-        height: 40%;
-        width: 60%;
-    }
-}
 
-@media screen and (min-width : 1080px) {
-    #identity {
-        height: 40%;
-        width: 30%;
-    }
-}
-
-@media screen and (min-width : 1920px) {
-    #identity {
-        height: 40%;
-        width: 20%;
-    }
-}
 
 @keyframes glow {
     0% {
@@ -189,22 +154,17 @@ body {
 
 #projets h1 {
     font-family: "BlueSignature";
-    font-size: 100px;
+    font-size: 70px;
     padding-right: 50px;
-    width: 50%;
-    text-align: end;
+    text-align: center;
+    width: 100%;
+    margin-bottom: 3rem;
 }
 
 #projets #list-projects {
-    margin-left: 10px;
-    padding-left: 10px;
-    border-left: 1px solid white;
-    width: 50%;
-}
-
-.link-project {
-    text-decoration: none;
-    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .link-project:hover {
@@ -218,17 +178,19 @@ body {
 
 #formations h1 {
     font-family: "BlueSignature";
-    font-size: 100px;
-    padding-right: 50px;
-    width: 50%;
-    text-align: end;
+    font-size: 70px;
+    width: 100%;
+    text-align: center;
 }
 
 #formations #training {
-    margin-left: 10px;
-    padding-left: 10px;
-    border-left: 1px solid white;
-    width: 50%;
+    width: 100%;
+}
+
+.div-training {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 
@@ -237,21 +199,53 @@ body {
     background: #2c281a;
 }
 
+#xp {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 #experiences h1 {
     font-family: "BlueSignature";
-    font-size: 100px;
+    font-size: 70px;
     padding-right: 50px;
-    width: 50%;
-    text-align: end;
+    width: 100%;
+    text-align: center;
 }
 
 #experiences #xp {
     margin-left: 10px;
     padding-left: 10px;
-    border-left: 1px solid white;
-    width: 50%;
+    width: 80%;
 }
 
+.company-profil {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.img-container-xp {
+    display: flex;
+    gap: 10px;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.img-div-xp {
+    display: flex;
+    height: 50px;
+    margin-top: 10px;
+    border-radius: 10px;
+    align-items: center;
+    background: rgba(255, 255, 255, 1);
+}
+
+.div-xp-date-comp {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
 /************************************** CONTACT */
 #contact {
@@ -260,28 +254,170 @@ body {
 
 #contact h1 {
     font-family: "BlueSignature";
-    font-size: 100px;
-    padding-right: 50px;
-    width: 50%;
-    text-align: end;
+    font-size: 60px;
+    width: 100%;
+    text-align: center;
 }
 
 #contact #contact-me {
-    margin-left: 10px;
-    padding-left: 10px;
-    border-left: 1px solid white;
-    width: 50%;
+    text-align: start;
+    width:80%;
+    margin-left: auto;
 }
-
-/* #contact-me h2{
-    padding: 10px;
-} */
 
 .link {
     color: transparent;
 }
 
 .label a {
-    text-decoration: none;
     color: transparent;
+}
+
+
+
+@media screen and (min-width : 1080px) {
+
+    /* Navbar */
+    .navbar {
+        flex-direction: row;
+    }
+
+    .navbar ul {
+        gap: 50px;
+        display: flex;
+        position: inherit;
+        flex-direction: row;
+        background: transparent;
+        width: auto;
+        padding: none;
+
+    }
+
+    #burger {
+        display: none;
+    }
+
+    /* Homepage */
+    #identity {
+        height: 40%;
+        width: 30%;
+    }
+
+
+    /* Pages */
+    .page {
+        flex-direction: row;
+    }
+
+    /* Projets */
+    #projets h1 {
+        width: 50%;
+        text-align: end;
+    }
+
+    #projets #list-projects {
+        margin-left: 10px;
+        padding-left: 10px;
+        border-left: 1px solid white;
+        width: 50%;
+    }
+
+    /* Training */
+    #formations h1 {
+        font-size: 70px;
+        padding-right: 50px;
+        width: 50%;
+        text-align: end;
+    }
+
+    #formations #training {
+        margin-left: 10px;
+        padding-left: 10px;
+        border-left: 1px solid white;
+        width: 50%;
+    }
+
+    .div-training {
+        display: flex;
+        flex-direction: row;
+        justify-content: start;
+    }
+
+    .div-training h4,
+    .div-training p {
+        text-align: start;
+    }
+
+    /* XP */
+    #xp {
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+    }
+
+    #xp div {
+        align-items: start;
+    }
+
+    #experiences h1 {
+        font-family: "BlueSignature";
+        font-size: 100px;
+        padding-right: 50px;
+        width: 50%;
+        text-align: end;
+    }
+
+    #experiences #xp {
+        margin-left: 10px;
+        padding-left: 10px;
+        border-left: 1px solid white;
+        width: 50%;
+    }
+
+    .company-profil {
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+    }
+
+    .img-div-xp {
+        align-items: start;
+    }
+
+    .img-container-xp {
+        width: 90%;
+        display: flex;
+        gap: 10px;
+        flex-wrap: wrap;
+        justify-content: start;
+    }
+
+    /* Contact */
+    #contact h1 {
+        font-size: 100px;
+        padding-right: 50px;
+        width: 50%;
+        text-align: end;
+    }
+
+    #contact #contact-me {
+        margin-left: 10px;
+        padding-left: 10px;
+        border-left: 1px solid white;
+        width: 50%;
+        /* text-align: start; */
+    }
+
+    #contact-me h2 {
+        padding: 10px;
+    }
+}
+
+@media screen and (min-width : 1920px) {
+
+    /* Homepage */
+    #identity {
+        height: 40%;
+        width: 20%;
+    }
 }
