--- a/style.css
+++ b/style.css
@@ -223,7 +223,12 @@ a {
     display: flex;
     flex-direction: column;
     align-items: center;
+
 }
+
+/* .company-profil h2 {
+    font-size: 20px;
+} */
 
 .img-container-xp {
     display: flex;
@@ -234,17 +239,22 @@ a {
 
 .img-div-xp {
     display: flex;
-    height: 50px;
+    height: 30px;
     margin-top: 10px;
     border-radius: 10px;
     align-items: center;
     background: rgba(255, 255, 255, 1);
 }
 
+
 .div-xp-date-comp {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.div-xp-date-comp h2{
+    font-size: 20px;
 }
 
 /************************************** CONTACT */
@@ -398,6 +408,7 @@ a {
 
     .img-div-xp {
         align-items: start;
+        height: 50px;
     }
 
     .img-container-xp {
@@ -406,6 +417,10 @@ a {
         gap: 10px;
         flex-wrap: wrap;
         justify-content: start;
+    }
+
+    .div-xp-date-comp h2{
+        font-size: 32px;
     }
 
     /* Contact */
