fix mobile display landscape

--- a/style.css
+++ b/style.css
@@ -315,7 +315,7 @@ a {
     text-align: start;
 }
 
-@media screen and (orientation : landscape) and (max-width : 720px) {
+@media screen and (orientation : landscape) {
 
     .div-training p{
         display: none;
