--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ a {
     color: white;
 }
 
-.navbar ul{
+.navbar ul {
     display: none;
     position: absolute;
     flex-direction: column;
@@ -174,13 +174,13 @@ a {
     justify-content: center;
 }
 
-.label-project img{
+.label-project img {
     width: 50px;
     padding: 5px;
     border-radius: 10px;
 }
 
-.link-project{
+.link-project {
     font-size: 20px;
 }
 
@@ -210,7 +210,7 @@ a {
     align-items: center;
 }
 
-.div-training div h3{
+.div-training div h3 {
     font-size: 20px
 }
 
@@ -269,8 +269,15 @@ a {
     align-items: center;
 }
 
-.div-xp-date-comp h2{
+.div-xp-date-comp h2 {
     font-size: 20px;
+}
+
+.text-xp{
+    display: flex;
+    align-items: center;
+    height: 40px;
+    margin-bottom: 20px;
 }
 
 /************************************** CONTACT */
@@ -315,9 +322,9 @@ a {
     text-align: start;
 }
 
-@media screen and (orientation : landscape) and (max-width : 1079px){
+@media screen and (orientation : landscape) and (max-width : 1079px) {
 
-    .div-training p{
+    .div-training p {
         display: none;
     }
 
@@ -363,10 +370,11 @@ a {
         text-align: start;
     }
 
-    .div-training div h3{
+    .div-training div h3 {
         font-size: 12px
     }
-    .div-training div h2{
+
+    .div-training div h2 {
         font-size: 12px
     }
 
@@ -402,46 +410,57 @@ a {
         align-items: start;
     }
 
-
-    .div-xp-date-comp h2{
-        font-size: 20px;
+    .text-xp{
+        display: none;
     }
 
-        /* Contact */
-        #contact h1 {
-            font-size: 50px;
-            padding-right: 50px;
-            width: 50%;
-            text-align: end;
-        }
+    .div-xp-date-comp h2 {
+        font-size: 15px;
+    }
+    .div-xp-date-comp {
+        margin-bottom: 15px;
+    }
     
-        #contact-me {
-            margin-left: 10px;
-            padding-left: 10px;
-            border-left: 1px solid white;
-            width: 50%;
-            display: flex;
-        }
-        
-        .label {
-            width: 100%;
-        }
-    
-        .label h2 {
-            font-size: 15px;
-        }
-    
-        .label :nth-child(1) {
-            width: auto;
-            text-align: start;
-        }
-    
-        .label :nth-child(2) {
-            text-align: start;
-        }
+    .img-container-xp{
+        display: none;
+        height: 0px;
+    }
+
+    /* Contact */
+    #contact h1 {
+        font-size: 50px;
+        padding-right: 50px;
+        width: 50%;
+        text-align: end;
+    }
+
+    #contact-me {
+        margin-left: 10px;
+        padding-left: 10px;
+        border-left: 1px solid white;
+        width: 50%;
+        display: flex;
+    }
+
+    .label {
+        width: 100%;
+    }
+
+    .label h2 {
+        font-size: 15px;
+    }
+
+    .label :nth-child(1) {
+        width: auto;
+        text-align: start;
+    }
+
+    .label :nth-child(2) {
+        text-align: start;
+    }
 }
 
-@media screen and (min-width : 1080px){
+@media screen and (min-width : 1080px) {
 
     /* Navbar */
     .navbar {
@@ -482,7 +501,7 @@ a {
         width: 50%;
     }
 
-    .label-project img{
+    .label-project img {
         width: 80px;
         padding: 10px;
         border-radius: 15px;
@@ -514,12 +533,12 @@ a {
         text-align: start;
     }
 
-    .div-training div h3{
+    .div-training div h3 {
         font-size: 24px
     }
 
 
-    .link-project{
+    .link-project {
         font-size: 32px;
     }
 
@@ -568,7 +587,7 @@ a {
         justify-content: start;
     }
 
-    .div-xp-date-comp h2{
+    .div-xp-date-comp h2 {
         font-size: 32px;
     }
 
