--- a/style.css
+++ b/style.css
@@ -427,10 +427,22 @@ a {
         display: flex;
         flex-direction: column;
         align-items: start;
+        margin-left: 10px;
     }
 
     .text-xp{
         display: none;
+    }
+
+    .div-xp-date-comp {
+        display:flex;
+        flex-direction: row;
+    }
+
+    .company-profil :last-child{
+        font-size: 12px;
+        font-style: italic;
+        font-weight: normal;
     }
 
     .div-xp-date-comp h2 {
